--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
                         <td>{{contact.name}}</td>
                         <td>{{contact.email}}</td>
                         <td>{{contact.number}}</td>
+                        <td ng-click="remove(contact._id)"><button class="btn btn-danger">Remove</button></td>
                     </tr>
                 </tbody>        
            </table>    
